invoice has calculations in backend

--- a/app/templates/public/invoice.html
+++ b/app/templates/public/invoice.html
@@ -13,10 +13,13 @@
   <div class="invoice">
     <div class="basic-info">
       <div class="doc-name">
-        <h2>pvm sąskaita-faktūra</h2>
+        <h2 id="inv-type">pvm sąskaita-faktūra</h2>
         <img src="{{url_for('static', filename='img/arrows.png')}}" alt="click">
       </div>
-      <p>INV <span>001</span></p>
+      <div class="inv-name">
+        <input type="text" value="INV">
+        <input type="number" value="1">
+      </div>
       <div id="date-input" class="date-input">
         <input id="date" type="date" value="2023-05-15"  min="2018-01-01" max="2030-12-31">
         <p>2023-05-15</p>
@@ -61,16 +64,18 @@
       <div class="invoice-line">
         <button class="remove-line">-</button>
         <input class="product" maxlength="50" type="text">
-        <input class="vnt" type="number" min="0" value="1">
-        <input type="text" maxlength="5" value="vnt">
-        <input class="price" type="number" min="0" value="0">
+        <input class="vnt user-input" type="number" value="1">
+        <input class ='vnt-name' type="text" maxlength="5" value="vnt">
+        <input class="price user-input" type="number" value="0">
         <input class="total" type="number" readonly value="0">
       </div>
-      <div id="add-line-holder" class="invoice-line">
+      <div id="add-line-holder" class="add-line-holder">
         <button id="add-line" class="add-line">+</button>
+      </div>
+      <div id="total-sum-holder" class="right-sum-holder">
         <div class="first-sum-holder">
           <p class="first-sum">Suma be PVM</p>
-          <input type="number" readonly value="0">
+          <input id="beforeVAT" type="number" readonly value="0">
         </div>
       </div>
       <div id="VAT-settings" class="right-sum-holder">
@@ -79,22 +84,22 @@
             <option selected value="21">21%</option>
             <option value="9">9%</option>
             <option value="5">5%</option>
-            <option value="3">3%</option>
+            <option value="6">6%</option>
             <option value="0">0%</option>
             <option value="21a">21% atv.</option>
           </select>
-          <input type="number" readonly value="0">
+          <input id="VAT" type="number" readonly value="0">
         </div>
       </div>
-      <div id="total-sum-holder" class="right-sum-holder">
+      <div id="total-sum-holder-vat" class="right-sum-holder">
         <div class="first-sum-holder">
           <p class="total-sum">Suma su PVM</p>
-          <input type="number" readonly value="0">
+          <input id="afterVAT" type="number" readonly value="0">
         </div>
       </div>
       <div class="button-holder">
         <button>Cancel</button>
-        <button>Save and print</button>
+        <!-- <button>Save and print</button> -->
         <button>Save</button>
       </div>
       
