--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
   <div class="main-screen">
-    <div class="left-part"></div>
+    <div class="left-part">
+      <h1>Sąskaita</h1>
+      <p>lorem ipsum</p>
+    </div>
     <img src="{{url_for('static', filename='img/accountant.png')}}" alt="accountant">
   </div>
 
