--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,15 +1,20 @@
+body{
+    height: 100vh;
+}
 .main-screen{
     width: 100%;
     display: flex;
     flex-direction: row;
-    flex-wrap:nowrap;
+    flex-wrap:wrap;
     font-size: 0;
     justify-content: center;
     gap: 90px;
+    user-select: none;
+    overflow: hidden;
 }
 
 .main-screen>.left-part{
-    margin: 57px 0 0 135px;
+    margin-top: 57px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -18,17 +23,197 @@
 }
 
 .main-screen>img{
-    width: 664px;
-    max-height: 615px;
+    margin-top: 15px;
+    width: 40vw;
+    min-width: 300px;
+    max-height: 590px;
     object-fit: contain;
+    transform: rotate(7deg);
 }
 
 h1{
     font-family: Mono;
     text-transform: uppercase;
+    margin-left: 20px;
     font-size: 64px;
     background: -webkit-linear-gradient(180deg, #59A0C9 0%, rgba(111, 164, 194, 0.5) 83.85%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    position: relative;
     /* color: linear-gradient(180deg, #59A0C9 0%, rgba(111, 164, 194, 0.5) 83.85%); */
+}
+
+h1::before{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 20px;
+    top: 50%;
+    width: 72px;
+    height: 82px;
+    object-fit: contain;
+    content: url('../img/Logo.png'); 
+}
+
+.left-part>p{
+    font-size: 14px;
+    color: #6FA4C2;
+    font-family: Mono;
+}
+
+.left-part>p>span{
+    text-transform: uppercase;
+}
+
+.btn-block{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 115px;
+}
+
+.btn-main{
+    background-color: transparent;
+    color: rgba(0, 6, 62, 1);
+    border: 2px solid #6FA4C2;
+    width: 245px;
+    height: 46px;
+    cursor: pointer;
+    font-family: 'Inter';
+    font-size: 20px;
+    box-shadow: 0 4px 2px -2px gray;
+}
+
+.btn-main:hover{
+    background-color: #6FA4C2;
+    color: #FFFFFF;
+}
+
+.hidden-form{
+    width: 500px;
+    height: 500px;
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 0%;
+    z-index: 3;
+    transform: translate(50, 50);
+    box-shadow: 0 4px 2px -2px gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    transform: translate(-50%, -100%);
+    font-family: 'Inter';
+    position: relative;
+}
+
+.hidden-form>h2{
+    margin-top: 51px;
+    margin-bottom: 27px;
+    font-family: 'Mono';
+    font-size: 22px;
+    color: rgba(111, 164, 194, 1);
+}
+
+.hidden-form * {
+    width: 275px;
+}
+
+.hidden-form .error-message{
+    position: absolute;
+    bottom: -70px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(206, 218, 231, 1);
+    font-size: 12px;
+    font-family: 'Mono';
+    width: 273px;
+    min-height: 30px;
+}
+
+.error-message>p{
+    margin: auto;
+    width: 100%;
+    color: rgba(255, 10, 10, 1);
+    text-align: center;
+    padding: 10px;
+    line-height: 12px;
+}
+
+.hidden-form>button{
+    height: 31px;
+    background-color: rgba(111, 164, 194, 1);
+    color: #fff;
+    box-shadow: 0 4px 2px -2px gray;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 35px;
+}
+
+
+.hidden-form>div:last-of-type{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-bottom: 44px;
+    font-size: 12px;
+}
+
+.hidden-form>div:last-of-type>p>span{
+    color: rgba(111, 164, 194, 1);
+    cursor: pointer;
+}
+
+
+
+.input-holder{
+    margin-bottom: 10px;
+}
+
+.input-holder>input, .input-holder>input:focus{
+    height: 31px;
+    background-color: rgba(205, 217, 230, 1);
+    color: black;
+    padding: 0 5px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+}
+
+.input-holder>label{
+    font-size: 14px;
+}
+
+.input-holder>p{
+    font-size: 9px;
+}
+
+.signin>h2{
+    color: #000;
+}
+
+.signin>h2>span{
+    color: rgba(111, 164, 194, 1);
+    cursor: pointer;
+}
+
+
+
+
+.modal{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0,0.1);
+}
+
+.noshow{
+    display: none;
 }
