--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -22,53 +22,77 @@
     </div>
     <img draggable="false" src="{{url_for('static', filename='img/accountant.png')}}" alt="accountant">
   </div>
-  <form id="register-form" class="register noshow hidden-form">
+  {% if data.r_error == "" %}
+    <form id="register-form" class="register noshow hidden-form" action="/register" method="post">
+    {% else %}
+    <form id="register-form" class="register hidden-form" action="/register" method="post">
+    {% endif %}
     <h2>Registruotis</h2>
     <div class="input-holder">
-      <label for="Vardas">Vardas</label>
-      <input id="r_name" type="text">
+      <label for="r_login">Prisijungimo vardas</label>
+      <input id="r_login" required type="text" name="r_login" value="{{data.r_login}}">
+    </div>
+    <div class="input-holder">
+      <label for="Vardas">Vardas/Pavadinimas sąskaitoje</label>
+      <input id="r_name" required type="text" name="r_name" value="{{data.r_name}}">
     </div>
     <div class="input-holder">
       <label for="r_email">El. paštas</label>
-      <input id="r_email" type="email">
+      <input id="r_email" required type="email" name="r_email" value="{{data.r_email}}">
     </div>
     <div class="input-holder">
       <label for="r_password">Slaptažodis</label>
-      <input id="r_password" type="password">
+      <input id="r_password" required type="password" name="r_password">
     </div>
     <div class="input-holder">
       <label for="r_password_repeat">Pakartokite slaptažodį</label>
-      <input id="r_password_repeat" type="password">
+      <input id="r_password_repeat" required type="password" name="r_password_repeat">
       <p>Slaptažodyje turi būti bent 1 didžioji raidė [A-Z], 1 skaitmuo [0-9]</p>
     </div>
-    <button type="submit">Registruotis</button>
+    <button type="submit" name="register_form">Registruotis</button>
+    {% if data.r_error == "" %}
     <div class="error-message noshow">
-      <p>Klaidos aprašymas</p>
+    {% else %}
+    <div class="error-message">
+    {% endif %}
+      <p>{{data.r_error}}</p>
     </div>
     <div>
       <p>Jau turite paskyrą? <span>Prisijungti</span></p>
     </div>
   </form>
-  <form id="join-form" class="signin noshow hidden-form">
+  {% if data.s_error == "" %}
+  <form id="join-form" class="signin noshow hidden-form" action="/login" method="post">
+  {% else %}
+  <form id="join-form" class="signin hidden-form" action="/login" method="post">
+  {% endif %}
     <h2>Prisijungti arba <span>Registruotis</span></h2>
     <div class="input-holder">
-      <label for="Vardas">Vardas</label>
-      <input id="r_name" type="text">
+      <label for="s_login">Prisijungimo vardas</label>
+      <input id="s_login" required type="text" name="s_login" value="{{data.s_login}}">
     </div>
     <div class="input-holder">
-      <label for="r_password">Slaptažodis</label>
-      <input id="r_password" type="password">
+      <label for="s_password">Slaptažodis</label>
+      <input id="s_password" required type="password" name="s_password">
     </div>
-    <button type="submit">Prisijungti</button>
+    <button type="submit" name="signin_form">Prisijungti</button>
+    {% if data.s_error == "" %}
     <div class="error-message noshow">
-      <p>Klaidos aprašymas</p>
+    {% else %}
+    <div class="error-message">
+    {% endif %}
+      <p>{{data.s_error}}</p>
     </div>
     <div>
       <p>Dar neturite paskyros? <span>Užsiregistruokite</span></p>
     </div>
 
   </form>
-  <div class="modal noshow"> </div>
+  {% if data.r_error == "" and data.s_error == ""%}
+  <div class="modal noshow"></div>
+  {% else %}
+  <div class="modal"></div>
+  {% endif %}
 
 
   <div class="triangle"></div>
