--- a/app/static/css/list.css
+++ b/app/static/css/list.css
@@ -80,19 +80,51 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    padding: 10px 0 10px 0;
     width: 1010px;
-    min-height: 300px;
     background-color: white;
     box-shadow: 0 1px 2px #000000, 0 4px 10px #525252;
+    position: relative;
 
 }
 
 
-.list>div{
-    width: 90%;
-    margin: 10px auto;
+.list>.line{
+    width: 100%;
+    padding: 10px;
     display: flex;
+    flex-direction: line;
+    color: rgba(111, 164, 194, 1);
+    border-bottom: dashed rgba(111, 164, 194, 1) 1px;
+    align-items: center;
 }
+
+.line>p, .line>div{
+    width: 16%;
+    font-size: 16px;
+}
+
+.line>div>button{
+    border: rgba(111, 164, 194, 1) 2px solid;
+    cursor: pointer;
+    padding: 5px;
+    background-color: transparent;
+    position: relative;
+}
+
+.line>div>button>img{
+    object-fit: contain;
+    width: 25px;
+    height: 25px;
+    filter: invert(69%) sepia(23%) saturate(630%) hue-rotate(158deg) brightness(86%) contrast(87%);
+}
+
+.first-line>p{
+    font-weight: bold;
+    font-size: 18px;
+}
+
+
 
 .main-screen{
     position: relative;
@@ -117,6 +149,17 @@
 
 .user-form .error-message{
     bottom: -100px;
+}
+
+.error-info{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: -50px;
+    left: 0;
+    color: red;
+    background-color: rgba(111, 164, 194, 1);
+    padding: 10px 20px;
 }
 
 
