--- a/app/templates/registered/list.html
+++ b/app/templates/registered/list.html
@@ -22,6 +22,35 @@
         <a class="btn-new-invoice" href="{{url_for('new_invoice')}}"><button>Nauja sąskaita</button></a>
     </div>
     <div class="list">
+        <div class="error-info noshow">
+            <p></p>
+        </div>
+        {% if invoices|length > 0 %}
+        <div class="line first-line">
+            <p>Pirkėjas</p>
+            <p>Numeris</p>
+            <p>Suma be PVM</p>
+            <p>PVM</p>
+            <p>Suma su PVM</p>
+            <p>Valdymas</p>
+        </div>
+            {% for invoice in invoices %}
+            <div class="line">
+                <input class="id" type="hidden" value="{{invoice.id}}">
+                <p class="name">{{invoice.buyer_name}}</p>
+                <p class="number">{{invoice.full_number}}</p>
+                <p>{{invoice.sum_before_vat}}</p>
+                <p>{{invoice.vat}}</p>
+                <p>{{invoice.sum_after_vat}}</p>
+                <div>
+                    <button class="edit-line"><img src="{{ url_for('static', filename='img/edit.svg')}}" alt="edit"></button>
+                    <button class="delete-line"><img src="{{ url_for('static', filename='img/delete.svg')}}" alt="edit"></button>
+                </div>
+            </div>    
+            {% endfor %}
+        {% else %}
+            <h3>Jus dar neturite išrašytų sąskaitų-faktūrų</h3>
+        {% endif %}        
     </div>
     {% if data.error == "" %}
     <form id="user-form" class="hidden-form user-form noshow" action="/user-settings" method="post">
@@ -53,8 +82,8 @@
             <p>{{data.error}}</p>
         </div>
         <div class="btn-holder">
-            <button type="submit" value="cancel" name="submit-button">Atšaukti</button>
-            <button type="submit" value="save" name="submit-button">Išsaugoti</button>
+            <button type="submit" value="cancel-list" name="submit-button">Atšaukti</button>
+            <button type="submit" value="save-list" name="submit-button">Išsaugoti</button>
         </div>
     </form>
 
