generate opdf and delete other generated pdfs if thety older then 15 sek

--- a/app/templates/registered/invoice.html
+++ b/app/templates/registered/invoice.html
@@ -63,7 +63,7 @@
     <div class="inv-lines">
       <div class="first-line">
         <p></p>
-        <p>Prekės pavadinimas</p>
+        <p>Prekių pavadinimas</p>
         <p>Kiekis</p>
         <p>Mat.</p>
         <p>Kaina</p>
