print and save logic separated. Print button added to list

--- a/app/templates/registered/invoice.html
+++ b/app/templates/registered/invoice.html
@@ -120,8 +120,8 @@
       </div>
       <div class="button-holder">
         <a href="{{url_for('list_route')}}"><button type="button">Cancel</button></a>
-        <button type="submit" name="submit-button" value="print">Save and print</button>
-        <button type="submit" name="submit-button" value="save">Save</button>
+        <button id="form-print" type="submit" name="save-button" value="print">Save and print</button>
+        <button id="form-save" type="submit" name="submit-button" value="save">Save</button>
       </form>
       
 
