--- a/app/templates/registered/list.html
+++ b/app/templates/registered/list.html
@@ -48,7 +48,8 @@
                 <p>{{invoice.sum_after_vat}}</p>
                 <form action="/edit-invoice/{{invoice.id}}" method="post">
                     <button type="submit" class="edit-line"><img src="{{ url_for('static', filename='img/edit.svg')}}" alt="edit"></button>
-                    <button type="button" class="delete-line"><img src="{{ url_for('static', filename='img/delete.svg')}}" alt="edit"></button>
+                    <button type="button" class="print-line"><img src="{{ url_for('static', filename='img/printer.svg')}}" alt="print"></button>
+                    <button type="button" class="delete-line"><img src="{{ url_for('static', filename='img/delete.svg')}}" alt="delete"></button>
                 </form>
             </div>    
             {% endfor %}
