--- a/app/static/css/list.css
+++ b/app/static/css/list.css
@@ -89,6 +89,7 @@
 }
 
 
+
 .list>.line{
     width: 100%;
     padding: 10px;
@@ -122,6 +123,54 @@
 .first-line>p{
     font-weight: bold;
     font-size: 18px;
+}
+
+@media (max-width: 1020px) {
+    .list{
+        width: 800px;
+    }
+}
+
+
+@media (max-width: 800px) {
+    .list{
+        width: 600px;
+    }
+
+    .list>.line>form>button>img{
+        width: 15px;
+        height: 15px;
+    }
+
+}
+
+@media (max-width: 600px) {
+    h1{
+        font-size: 18px;
+        text-align: center;
+    }
+
+    .list{
+        width: 310px;
+    }
+
+    .line>form>button{
+        padding: 2px;
+    }
+
+    .list>.line>form>button>img{
+        width: 8px;
+        height: 8px;
+    }
+
+    .first-line>p{
+        font-weight: bold;
+        font-size: 10px;
+    }
+
+    .line>p{
+        font-size: 10px;
+    }
 }
 
 
